Notification added for ride update, new booking, messages.