@@ -2,6 +2,7 @@ package de.uni_ulm.uberuniulm.ui.fragments;
 
 import android.app.AlertDialog;
 import android.app.DatePickerDialog;
+import android.app.NotificationManager;
 import android.app.TimePickerDialog;
 import android.content.Context;
 import android.content.DialogInterface;
@@ -56,6 +57,7 @@ import de.uni_ulm.uberuniulm.MainPage;
 import de.uni_ulm.uberuniulm.MapPage;
 import de.uni_ulm.uberuniulm.R;
 import de.uni_ulm.uberuniulm.StartPage;
+import de.uni_ulm.uberuniulm.model.notifications.NotificationsManager;
 import de.uni_ulm.uberuniulm.model.ride.BookedRide;
 import de.uni_ulm.uberuniulm.model.encryption.ObscuredSharedPreferences;
 import de.uni_ulm.uberuniulm.model.ride.OfferedRide;
@@ -264,71 +266,82 @@ public class MainPageFragment extends Fragment {
 
 
                         if (!clickedRide.getBookedUsers().contains(userId)) {
-                            dialog.setItems(getResources().getStringArray(R.array.bookoptions), new DialogInterface.OnClickListener() {
-                                @Override
-                                public void onClick(DialogInterface dialog, int pos) {
-                                    if (pos == 0) {
-                                        AlertDialog.Builder alert = new AlertDialog.Builder(fragmentView.getContext());
+                            if(clickedRide.getPlaces_open()>0) {
+                                dialog.setItems(getResources().getStringArray(R.array.bookoptions), new DialogInterface.OnClickListener() {
+                                    @Override
+                                    public void onClick(DialogInterface dialog, int pos) {
+                                        if (pos == 0) {
+                                            AlertDialog.Builder alert = new AlertDialog.Builder(fragmentView.getContext());
 
-                                        alert.setMessage("You want to book this ride?");
-                                        alert.setTitle("Book Ride");
+                                            alert.setMessage("You want to book this ride?");
+                                            alert.setTitle("Book Ride");
 
 
-                                        alert.setPositiveButton("Yes", new DialogInterface.OnClickListener() {
-                                            public void onClick(DialogInterface dialog, int whichButton) {
+                                            alert.setPositiveButton("Yes", new DialogInterface.OnClickListener() {
+                                                public void onClick(DialogInterface dialog, int whichButton) {
 
-                                                //TODO hier eigentlich Benachrichtigung an Fahrer
-                                                if (clickedRide.getPlaces_open() > 0) {
-                                                    Date date = Calendar.getInstance().getTime();
-                                                    SimpleDateFormat formatter = new SimpleDateFormat("dd/MM/yyyy");
+                                                    //TODO hier eigentlich Benachrichtigung an Fahrer
+                                                    if (clickedRide.getPlaces_open() > 0) {
+                                                        Date date = Calendar.getInstance().getTime();
+                                                        SimpleDateFormat formatter = new SimpleDateFormat("dd/MM/yyyy");
 
-                                                    myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("bookedUsers").child(userId).setValue(formatter.format(date));
-                                                    int places = clickedRide.getPlaces_open() - 1;
-                                                    myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("places_open").setValue(places);
+                                                        myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("bookedUsers").child(userId).setValue(formatter.format(date));
+                                                        int places = clickedRide.getPlaces_open() - 1;
+                                                        myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("places_open").setValue(places);
 
-                                                    BookedRide bookedRide = new BookedRide(clickedRide.getUserId(), clickedRide.getzIndex());
-                                                    final SharedPreferences pref = new ObscuredSharedPreferences(
-                                                            fragmentView.getContext(), fragmentView.getContext().getSharedPreferences("BookedRideId", Context.MODE_PRIVATE));
-                                                    int obookedRideId = pref.getInt("obookedRideId", 0);
+                                                        BookedRide bookedRide = new BookedRide(clickedRide.getUserId(), clickedRide.getzIndex());
+                                                        final SharedPreferences pref = new ObscuredSharedPreferences(
+                                                                fragmentView.getContext(), fragmentView.getContext().getSharedPreferences("BookedRideId", Context.MODE_PRIVATE));
+                                                        int obookedRideId = pref.getInt("obookedRideId", 0);
 
-                                                    myRef.child(userId).child("obookedRides").child(String.valueOf(obookedRideId)).setValue(bookedRide);
-                                                    SharedPreferences.Editor editor = pref.edit();
-                                                    editor.putInt("BookedRideId", obookedRideId + 1);
-                                                    editor.apply();
-                                                    adapter.notifyDataSetChanged();
-                                                } else {
-                                                    Toast.makeText(fragmentView.getContext(), "Oops, looks like somebody was a little faster than you.", Toast.LENGTH_LONG)
-                                                            .show();
+                                                        myRef.child(userId).child("obookedRides").child(String.valueOf(obookedRideId)).setValue(bookedRide);
+                                                        SharedPreferences.Editor editor = pref.edit();
+                                                        editor.putInt("BookedRideId", obookedRideId + 1);
+                                                        editor.apply();
+                                                        NotificationsManager notificationManager = new NotificationsManager();
+                                                        notificationManager.setUp(getContext());
+                                                        notificationManager.subscribeToTopic(clickedRide.getUserId() + "_" + clickedRide.getzIndex());
+                                                        adapter.notifyDataSetChanged();
+                                                    } else {
+                                                        Toast.makeText(fragmentView.getContext(), "Oops, looks like somebody was a little faster than you.", Toast.LENGTH_LONG)
+                                                                .show();
+                                                    }
                                                 }
-                                            }
-                                        });
+                                            });
 
-                                        alert.setNegativeButton("Cancel", new DialogInterface.OnClickListener() {
-                                            public void onClick(DialogInterface dialog, int whichButton) {
-                                                //TODO what ever you want to do with No option.
-                                            }
-                                        });
+                                            alert.setNegativeButton("Cancel", new DialogInterface.OnClickListener() {
+                                                public void onClick(DialogInterface dialog, int whichButton) {
+                                                    //TODO what ever you want to do with No option.
+                                                }
+                                            });
 
-                                        alert.show();
-                                    } else {
-                                        Intent intent = new Intent(fragmentView.getContext(), ChatPage.class);
-                                        intent.putExtra("SENDERID", userId);
-                                        intent.putExtra("RECEIVERNAME", clickedRideTriple.getFirst().get(1).toString());
-                                        intent.putExtra("RECEIVERID", clickedRideTriple.getFirst().get(0).toString());
-                                        startActivity(intent);
+                                            alert.show();
+                                        } else {
+                                            Intent intent = new Intent(fragmentView.getContext(), ChatPage.class);
+                                            intent.putExtra("SENDERID", userId);
+                                            intent.putExtra("RECEIVERNAME", clickedRideTriple.getFirst().get(1).toString());
+                                            intent.putExtra("RECEIVERID", clickedRideTriple.getFirst().get(0).toString());
+                                            startActivity(intent);
+                                        }
                                     }
-                                }
-                            });
+                                });
 
-                            dialog.setPositiveButton("CANCEL", new DialogInterface.OnClickListener() {
+                                dialog.setPositiveButton("CANCEL", new DialogInterface.OnClickListener() {
 
-                                @Override
-                                public void onClick(DialogInterface dialog, int which) {
-                                    dialog.dismiss();
-                                }
-                            });
-                            AlertDialog alert = dialog.create();
-                            alert.show();
+                                    @Override
+                                    public void onClick(DialogInterface dialog, int which) {
+                                        dialog.dismiss();
+                                    }
+                                });
+                                AlertDialog alert = dialog.create();
+                                alert.show();
+                            }else{
+                                Intent intent = new Intent(fragmentView.getContext(), ChatPage.class);
+                                intent.putExtra("SENDERID", userId);
+                                intent.putExtra("RECEIVERNAME", clickedRideTriple.getFirst().get(1).toString());
+                                intent.putExtra("RECEIVERID", clickedRideTriple.getFirst().get(0).toString());
+                                startActivity(intent);
+                            }
 
                         } else {
                             dialog.setItems(getResources().getStringArray(R.array.cancelbookingoptions), new DialogInterface.OnClickListener() {
@@ -352,12 +365,17 @@ public class MainPageFragment extends Fragment {
                                                 //TODO hier eigentlich Benachrichtigung an Fahrer
                                                 myRef.child(userId).child("obookedRides").child(String.valueOf(obookedRidesId)).removeValue();
                                                 myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("bookedUsers").child(userId).removeValue();
+                                                int places = clickedRide.getPlaces_open() + 1;
+                                                myRef.child(clickedRide.getUserId()).child("offeredRides").child(String.valueOf(clickedRide.getzIndex())).child("places_open").setValue(places);
                                                 clickedRide.getBookedUsers().remove(userId);
 
                                                 SharedPreferences.Editor editor = pref.edit();
                                                 editor.putInt("BookedRideId", obookedRidesId - 1);
                                                 editor.apply();
                                                 adapter.notifyDataSetChanged();
+                                                NotificationsManager notificationManager=new NotificationsManager();
+                                                notificationManager.setUp(getContext());
+                                                notificationManager.unsubscribeTopic(clickedRide.getUserId()+"_"+clickedRide.getzIndex());
                                             }
                                         });
 
@@ -370,7 +388,9 @@ public class MainPageFragment extends Fragment {
                                         alert.show();
                                     } else {
                                         Intent intent = new Intent(fragmentView.getContext(), ChatPage.class);
-                                        intent.putExtra("USERID", userId);
+                                        intent.putExtra("SENDERID", userId);
+                                        intent.putExtra("RECEIVERNAME", clickedRideTriple.getFirst().get(1).toString());
+                                        intent.putExtra("RECEIVERID", clickedRideTriple.getFirst().get(0).toString());
                                         startActivity(intent);
                                     }
                                 }
